@@ -1,6 +1,7 @@
 ChangeLog for the Qt GUI to Astrophotography
 
 20191223:
+	* fix qVariantFromValue deprecation in snowlife.cpp
 	* fix background color for skydisplaywidget
 	* fix bug of configuration dialog not being able to be reopened
 	* add Qt5.14
